Wed Dec 11 11:31:23 GMT 2019  Lee Noar  <lee.noar@sky.com>

	* som_swihandler.c(SWI "ELFFile",reason_code_SOM_ELFFILE_OPEN): Fix
	memory leak; if an error occurs when trying to open a file, e.g.
	file not found, free the now unused memory block.
	* som_register.c(som_register_sharedobject): Fix freeing of wrong pointer
	if somarray_add_object() fails.
	* som_history.c(som_history_add_client): Fix freeing of wrong pointer if
	som_alloc() fails.
	* som_alloc.c: Optional debugging aid (disabled by default) to mark the
	beginning of an allocated heap block.
	* configure.ac: Bump version number because of memory leak fix.

Sat Oct 12 18:27:59 BST 2019  Lee Noar  <lee.noar@sky.com>

	* configure.ac: Bump version number to 3.00.
	* somanager.cmhg: *SOMAddress can now take a register instead of an address.
	Add ELFFile and Location to SWI table.
	Add errors abi_mismatch and abi_fail.
	* som_utilswis.{h/c}(som_location): New function; given an address, return
	the library that contains it and the offset within it. Can be used by Unixlib
	in backtraces.
	* som_utils.{h/c}(copy_arg_string): New function.
	* som_types.h(type som_PTR): make unsigned.
	* som_swihandler.c: Handle SWI SOM_ELFFile and SWI SOM_Location.
	* som_runcom.c: Terminology change; loader->linker.
	Some structure member name changes.
	(struct runcom_state): Add flag to record whether the program
	is ARMEABI.
	(runcom_init_state): Set flag based on system variable indicating
	whether text segments should be writable (normally they should not be).
	(register_dynamic_linker): elffile_open() now responsible for gathering
	information about an ELF image.
	Check for ARMEABI.
	som_register_sharedobject() now responsible for copying the data segment.
	(load_dynamic_linker): Check for abi mismatch between client and linker.
	Use elffile_alloc_segments() for memory allocation.
	(setup_aux_array): Add AT_HWCAP as new entry and use it to record
	whether client is ARMEABI (passed to the dynamic linker, so that it